# 3DS-ARAP

./: .gitignore  ARAPDeformer.cpp  ARAPDeformer.h  CMakeLists.txt  Dockerfile  README.md  SimpleMesh.h  docker-compose.yml  main.cpp
Data/: bar1.ply  bar2.ply  bar3.ply  bunny.ply  bunny_deformed.off  cactus_highres.ply  cactus_small.ply  cylinder_small.ply  decimated-knight.ply  dino.ply  square_21.ply  square_21_spikes.ply
benchmark_data/: arap_benchmark_PAPER_ARAP_CHOLESKY.csv
plots/: becnhmark_plot.py
src/: Eigen.h  SimpleMesh.h  benchmark.cpp  ceresSolver.h  gamma_mlp.h  load_mesh.cpp  load_mesh.h  main.cpp  point_transformer_block.h  point_transformer_layer.cpp  point_transformer_layer.h  position_encoder.h  solver.cpp  solver.h  test_arap_solver.cpp  viewer.cpp  viewer.h
